--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: _book
 
 book:
-  title: "Bulkley River Watershed Connectivity Remediation Plan: 2021 - 2031"
+  title: "Bulkley River Watershed Connectivity Restoration Plan: 2021 - 2031"
   author: "Canadian Wildlife Federation"
   date: last-modified
   date-format: "DD-MM-YYYY"
@@ -14,7 +14,6 @@ book:
     - content/barrier-prioritization.qmd
     - content/work-planning.qmd
     - content/references.qmd
-    - content/version-history.qmd
   appendices: 
     - content/project-partners.qmd
     - content/supplementary-information.qmd 
